this time it's the last change

--- a/src/app/components/views/career/career.component.html
+++ b/src/app/components/views/career/career.component.html
@@ -23,11 +23,12 @@
         </tr>
       </table>
       <div class="hov">
-        <app-tooltip [name]="'Basis 42-Stunden-Woche minus Wochenende, 10T Feiertage und 36T Ferien pro Jahr'"
-          [description]="'(Gesamtzeit Beginn bis Ende) / (7 * 5) / (24 * (8.5 * pensum / 100)) / (36 * 35) / (10 * 9)'"
+        <app-tooltip
+          [name]="'Basis 42-Stunden-Woche minus Wochenende, 10T Feiertage und '+(career.type === ct.SCHOOL ? '13W' : '36T')+' Ferien pro Jahr'"
+          [description]="'(Gesamtzeit Beginn bis Ende) / (7 * 5) / (24 * (8.5 * pensum / 100)) / '+(career.type === ct.SCHOOL ? '(360 * (360 - 91))' : '(36 * 35)')+' / (10 * 9)'"
           [direction]="d.TOP"></app-tooltip>
         <p><b>Insgesamte Stunden geleistet</b></p>
-        <p>{{getDuration(career.datefrom, career.dateto, career.pensum)}}</p>
+        <p>{{getDuration(career.datefrom, career.dateto, career.pensum, career.type)}}</p>
       </div>
     </div>
     <ng-container bottom>
